Add JWT token authentication method